Added province relationship and active admin functionality for part 3.

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -2,7 +2,13 @@
   <h3><%= customer.full_name %></h3>
   <p><%= image_tag customer.image %></p>
 
-  <p>Province:</p>
+  <p><strong>Province:</strong>
+    <% if customer.province == nil %>
+      None
+    <% else %>
+      <%= customer.province.name %>
+    <% end %>
+  </p>
 
   <p><%= customer.phone_number%></p>
   <p><%= customer.email_address%></p>
